--- a/sample/tsconfig.json
+++ b/sample/tsconfig.json
@@ -1,21 +1,45 @@
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
+// /*
+//   This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+//   It is not intended to be used to perform a compilation.
 
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
+//   To learn more about this file see: https://angular.io/config/solution-tsconfig.
+// */
+// {
+
+//   "files": [],
+//   "references": [
+//     {
+//       "path": "./tsconfig.app.json"
+//     },
+//     {
+//       "path": "./tsconfig.spec.json"
+//     },
+//     {
+//       "path": "./e2e/tsconfig.json"
+//     }
+// ]
+// }
 {
-
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    },
-    {
-      "path": "./e2e/tsconfig.json"
-    }
-]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "baseUrl": "./",
+    "module": "esnext",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ]
+  },
+  "angularCompilerOptions": {
+    "enableIvy": true
+  }
 }
